ast/src/snapshots/ast__parser__tests__namespace_snapshots@path_2.snap
---
source: ast/src/parser.rs
assertion_line: 1540
expression: "parse(\"namespace std.io\")"
---
[
    Namespace(
        Namespace {
            path: IdentifierPath {
                path: [
                    Identifier {
                        name: "std",
                        location: Location(
                            10..13,
                        ),
                    },
                    Identifier {
                        name: "io",
                        location: Location(
                            14..16,
                        ),
                    },
                ],
                location: Location(
                    10..16,
                ),
            },
            location: Location(
                0..16,
            ),
        },
    ),
]
