ast/src/snapshots/ast__parser__tests__namespace_snapshots@path_3.snap
---
source: ast/src/parser.rs
assertion_line: 1541
expression: "parse(\"namespace std.io.path\")"
---
[
    Namespace(
        Namespace {
            path: IdentifierPath {
                path: [
                    Identifier {
                        name: "std",
                        location: Location(
                            10..13,
                        ),
                    },
                    Identifier {
                        name: "io",
                        location: Location(
                            14..16,
                        ),
                    },
                    Identifier {
                        name: "path",
                        location: Location(
                            17..21,
                        ),
                    },
                ],
                location: Location(
                    10..21,
                ),
            },
            location: Location(
                0..21,
            ),
        },
    ),
]
