ast/src/snapshots/ast__parser__tests__namespace_snapshots@path_casing.snap
---
source: ast/src/parser.rs
assertion_line: 1542
expression: "parse(\"namespace System.IO\")"
---
[
    Namespace(
        Namespace {
            path: IdentifierPath {
                path: [
                    Identifier {
                        name: "System",
                        location: Location(
                            10..16,
                        ),
                    },
                    Identifier {
                        name: "IO",
                        location: Location(
                            17..19,
                        ),
                    },
                ],
                location: Location(
                    10..19,
                ),
            },
            location: Location(
                0..19,
            ),
        },
    ),
]
