ast/src/snapshots/ast__parser__tests__new_snapshots@empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = new A();\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: New(
                                New {
                                    name: Scalar(
                                        ScalarType {
                                            name: "A",
                                            location: Location(
                                                32..33,
                                            ),
                                        },
                                    ),
                                    arguments: [],
                                    location: Location(
                                        28..33,
                                    ),
                                },
                            ),
                            location: Location(
                                20..36,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..38,
                ),
            },
            location: Location(
                0..38,
            ),
        },
    ),
]
