ast/src/snapshots/ast__parser__tests__new_snapshots@generic.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = new A<T>(a, b);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: New(
                                New {
                                    name: Generic(
                                        GenericType {
                                            name: Identifier {
                                                name: "A",
                                                location: Location(
                                                    32..33,
                                                ),
                                            },
                                            type_params: [
                                                Scalar(
                                                    ScalarType {
                                                        name: "T",
                                                        location: Location(
                                                            34..35,
                                                        ),
                                                    },
                                                ),
                                            ],
                                            location: Location(
                                                33..36,
                                            ),
                                        },
                                    ),
                                    arguments: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        37..38,
                                                    ),
                                                },
                                            },
                                        ),
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "b",
                                                    location: Location(
                                                        40..41,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        28..41,
                                    ),
                                },
                            ),
                            location: Location(
                                20..43,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..45,
                ),
            },
            location: Location(
                0..45,
            ),
        },
    ),
]
