ast/src/snapshots/ast__parser__tests__new_snapshots@param_2.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = new A(a, b);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: New(
                                New {
                                    name: Scalar(
                                        ScalarType {
                                            name: "A",
                                            location: Location(
                                                32..33,
                                            ),
                                        },
                                    ),
                                    arguments: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        34..35,
                                                    ),
                                                },
                                            },
                                        ),
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "b",
                                                    location: Location(
                                                        37..38,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        28..38,
                                    ),
                                },
                            ),
                            location: Location(
                                20..40,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..42,
                ),
            },
            location: Location(
                0..42,
            ),
        },
    ),
]
