ast/src/snapshots/ast__parser__tests__range_snapshots@expr_nested_exclusive.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"let _ = ((a + b)..(a + b + 1))\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Range(
                                Range {
                                    lower: Call(
                                        Call {
                                            callee: Some(
                                                Variable(
                                                    Variable {
                                                        name: Identifier {
                                                            name: "a",
                                                            location: Location(
                                                                30..31,
                                                            ),
                                                        },
                                                    },
                                                ),
                                            ),
                                            name: Identifier {
                                                name: "+",
                                                location: Location(
                                                    32..33,
                                                ),
                                            },
                                            arguments: [
                                                Variable(
                                                    Variable {
                                                        name: Identifier {
                                                            name: "b",
                                                            location: Location(
                                                                34..35,
                                                            ),
                                                        },
                                                    },
                                                ),
                                            ],
                                            type_parameters: [],
                                            location: Location(
                                                30..34,
                                            ),
                                        },
                                    ),
                                    upper: Call(
                                        Call {
                                            callee: Some(
                                                Call(
                                                    Call {
                                                        callee: Some(
                                                            Variable(
                                                                Variable {
                                                                    name: Identifier {
                                                                        name: "a",
                                                                        location: Location(
                                                                            39..40,
                                                                        ),
                                                                    },
                                                                },
                                                            ),
                                                        ),
                                                        name: Identifier {
                                                            name: "+",
                                                            location: Location(
                                                                41..42,
                                                            ),
                                                        },
                                                        arguments: [
                                                            Variable(
                                                                Variable {
                                                                    name: Identifier {
                                                                        name: "b",
                                                                        location: Location(
                                                                            43..44,
                                                                        ),
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                        type_parameters: [],
                                                        location: Location(
                                                            39..43,
                                                        ),
                                                    },
                                                ),
                                            ),
                                            name: Identifier {
                                                name: "+",
                                                location: Location(
                                                    45..46,
                                                ),
                                            },
                                            arguments: [
                                                Literal(
                                                    Int(
                                                        IntLiteral {
                                                            value: 1,
                                                            location: Location(
                                                                47..48,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            ],
                                            type_parameters: [],
                                            location: Location(
                                                39..47,
                                            ),
                                        },
                                    ),
                                    inclusive: false,
                                    location: Location(
                                        30..47,
                                    ),
                                },
                            ),
                            location: Location(
                                20..47,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..52,
                ),
            },
            location: Location(
                0..52,
            ),
        },
    ),
]
